It will display projects in a list form each with links to their corresponding repositories.

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,3 +6,12 @@
 img {
   width:100%;
 }
+.projects-head {
+  margin: 10px;
+}
+.about-content {
+  margin: 10px;
+}
+.new-project {
+  margin:12px;
+}
